--- a/src/main/java/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/java/com/creatingskies/game/core/GameCore.fxml
@@ -10,77 +10,70 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="772.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.core.GameCoreController">
 	<children>
-		<HBox layoutY="82.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-			<children>
-            <AnchorPane prefHeight="590.0" prefWidth="273.0">
+      <ScrollPane fx:id="mapScroller" hbarPolicy="NEVER" pannable="true" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" vbarPolicy="NEVER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <Pane fx:id="pane" style="-fx-background-color: #000000;">
                <children>
-                  <GridPane layoutX="16.0" layoutY="174.0" prefHeight="101.0" prefWidth="253.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="10.0" prefWidth="94.0" />
-                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="66.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="Obstacle Slow Factor" GridPane.rowIndex="1">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label text="Duration">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-      								<Label fx:id="durationLabel" text="0.0" GridPane.columnIndex="1">
-      									<font>
-      										<Font size="24.0" />
-      									</font>
-      								</Label>
-                        <Label fx:id="obstacleSlowLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="tileSlowLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </Label>
-                        <Label text="Tile Slow Factor" GridPane.rowIndex="2">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </GridPane>
-                  <Pane fx:id="miniMapPane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-                     <children>
-                        <GridPane fx:id="miniMapTiles" maxHeight="200.0" maxWidth="200.0" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
-                     </children>
-                  </Pane>
+                  <ImageView fx:id="stopImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="warningImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <GridPane fx:id="mapTiles" />
                </children>
-            </AnchorPane>
-            <ScrollPane fx:id="mapScroller" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" HBox.hgrow="ALWAYS">
-               <content>
-                  <Pane fx:id="pane">
-                     <children>
-                        <ImageView fx:id="stopImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
-                        <ImageView fx:id="warningImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
-                        <GridPane fx:id="mapTiles" />
-            				<Label fx:id="countDownValue" style="-fx-font-weight: bold;" text="3">
-            					<font>
-            						<Font size="96.0" />
-            					</font>
-            				</Label>
-                     </children>
-                  </Pane>
-               </content>
-            </ScrollPane>
-			</children>
-		</HBox>
+            </Pane>
+         </content>
+      </ScrollPane>
+				<Label fx:id="countDownValue" style="-fx-font-weight: bold;" text="3">
+					<font>
+						<Font size="96.0" />
+					</font>
+				</Label>
+      <ImageView fx:id="weatherImageView" fitHeight="101.0" fitWidth="127.0" opacity="0.5" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="10.0" />
+      <GridPane prefHeight="101.0" prefWidth="253.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="10.0" prefWidth="130.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="84.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label style="-fx-font-weight: bold;" text="Obstacle Slow Factor" textFill="WHITE" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label style="-fx-font-weight: bold;" text="Duration" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+								<Label fx:id="durationLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1">
+									<font>
+										<Font size="24.0" />
+									</font>
+								</Label>
+            <Label fx:id="obstacleSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="tileSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label style="-fx-font-weight: bold;" text="Tile Slow Factor" textFill="WHITE" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+      <Pane fx:id="miniMapPane" minHeight="200.0" minWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0">
+         <children>
+            <GridPane fx:id="miniMapTiles" minHeight="200.0" minWidth="200.0" />
+         </children>
+      </Pane>
 	</children>
 </AnchorPane>
